# cse

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AUTHORS.txt  CMakeLists.txt  CONTRIBUTORS.txt  Dockerfile  Dockerfile.linux-dev  LICENSE.txt  README.md  appveryor.yml  appveyor.yml  build-and-test-linux.bat  build-and-test-linux.sh  build.bat  build.sh  cleanbranch.bat  cse-user-manual.html  forge.toml  index.html  pyproject.toml  setup.sh  sitemap.xml
doc/: .gitignore  .pylintrc  CMakeLists.txt  CSEUserManual.docx  Gemfile  README.md  backup-rakefile.rb  build-docs.rb  checkdoc.bat  config.yaml  dodo.py  dodoc.bat  env.txt  package.json  pyproject.toml  rakefile.rb
doc/config/: defaults.yaml
doc/lib/: command.rb  coverage_check.rb  cse.rb  def_parser.rb  lineproc.rb  md.rb  pandoc.rb  probes.rb  section_index.rb  slug.rb  split_md.rb  table.rb  tables.rb  template.rb  toc.rb  utils.rb  verify_links.rb  xlink.rb
doc/options/: pandoc-html.txt  pandoc-md.txt  pandoc-pdf.tex  pandoc.txt
doc/src/: about-cse.md  coverage.py  cse-user-manual.md  cse-user-manual.yaml  dhwheater-doc.md  enduses.md  hooks.py  index.md  input-data.md  input-structure.md  introduction.md  main.py  mkdocs.yml  operation.md  output-reports.md  web-page.yaml
doc/template/: base.css
doc/test/: coverage_check_test.rb  rakefile_test.rb  table_test.rb  template_test.rb  test_helper.rb  xlink_test.rb
doc/util/: probes.yml
src/: ANCREC.CPP  ANCREC.H  BATTERY.cpp  BRF.H  BRFW.CPP  BRFW.H  CGCOMP.CPP  CGDEBUG.CPP  CGENBAL.CPP  CGRESULT.CPP  CGSOLAR.CPP  CGWTHR.CPP  CGWTHR.H  CMakeLists.txt  CNAH1.CPP  CNAH2.CPP  CNAUSZ.CPP  CNCOIL.CPP  CNCP.CPP  CNCULT.CPP  CNCULT.H  CNCULT2.CPP  CNCULT3.CPP  CNCULT4.CPP  CNCULT5.CPP  CNCULT6.CPP  CNCULTI.H  CNDEFNS.H  CNDTYPES.DEF  CNFAN.CPP  CNFIELDS.DEF  CNGLOB.H  CNGUTS.CPP  CNGUTS.H  CNHP.CPP  CNLOADS.CPP  CNRECS.DEF  CNTP.CPP  CNUNITS.DEF  CNZTU.CPP  (+240 more)
src/RCDEF/: CMakeLists.txt  RCDEF.sln  RCDEF.vcxproj  RCDEF.vcxproj.filters  dtypes.h  rcdef.cpp  rcdef_command_line.txt  readme.txt
src/save/: ANCREC.CPP  BRF.H  BRFW.CPP  CGCOMP.CPP  CGRESULT.CPP  CGSOLAR.CPP  CGWTHR.CPP  CNAH1.CPP  CNAH2.CPP  CNAUSZ.CPP  CNCOIL.CPP  CNCP.CPP  CNCULT3.CPP  CNCULT4.CPP  CNCULT6.CPP  CNGUTS.CPP  CNHP.CPP  CNRECS.DEF  CNZTU.CPP  CPGBUILD.CPP  CPGPRPUT.CPP  CSE.h  CUEVAL.CPP  CUEVAL.H  CUEVF.H  CUL.H  CUPARSEI.H  CUPROBE.CPP  CUTOK.H  CVPAK.H  DHWCalc.cpp  DHWSolar.cpp  DIRECTRY.CPP  DMPAK.H  EXMAN.CPP  EXMAN.H  Foundation.cpp  GMUTIL.CPP  IMPF.CPP  IRATS.H  (+28 more)
test/: .gitignore  1ZAttic.cse  1ZKiva.cse  205Test.cse  2ZAttic.cse  2ZUN.cse  2Zone.cse  3ZAirNetAH.cse  3ZoneAirNet.cse  3ZoneAirNetCSW.cse  600.cse  930.cse  960.cse  ACtest.csw  ACtest1b.cse  ASHPPkgRoom.cse  ASHPTest2.cse  ASHP_DFNG.cse  ASHWAT1.cse  BESTEST.cin  BGTEST.cse  Bishop.epw  CMakeLists.txt  CRTerminalAH.cse  CTZ12S13.CSW  DHW02.cse  DHWDU.cse  DHWLS.cse  DHWLoop32U.cse  DHW_BRWL.cse  DHW_C.cse  DHW_INV.cse  DHW_MFSizing.cse  DHW_SOLAR.cse  DHW_UEF.cse  DWHR.cse  DX-Constant-Efficiency.RS0004.a205.cbor  Ductest1c2.cse  ExportFileOutput.cse  FRESNO.cse  (+65 more)
test/error_comp/: CMakeLists.txt  error_comp.cpp
test/error_handling/: CMakeLists.txt  failed_importfile.cse  missing_weather_file.cse
test/ref/: 1ZATTIC.REP  1ZKIVA.REP  205TEST.REP  2ZATTIC.REP  2ZONE.REP  2ZUN.REP  3ZAIRNETAH.REP  3ZONEAIRNETCSW.REP  3ZoneAirNet.rep  600.REP  930.REP  960.REP  ACTEST1BL.REP  ASHPPKGROOM.REP  ASHPTEST2.REP  ASHPVC2.REP  ASHP_DFNG.REP  AUTOSIZE.REP  BT_TEST.REP  CHDHW.REP  COMMANDS.REP  CRTERMINALAH.REP  DHWLS.rep  DHW_AQUATHERMAIRE.REP  DHW_BRWL.REP  DHW_C.REP  DHW_DR.REP  DHW_INV.REP  DHW_MFSIZING.REP  DHW_SOLAR.rep  DHW_UEF.REP  DHW_ZONE.REP  DWHR.REP  ExportFileOutput.rep  FANCOIL.REP  FRESNO.REP  HERV.rep  IZFANTEST.REP  LOADANDAFMETERS.REP  MASSTEST1.REP  (+20 more)
test/ref-macos-appleclang-64-release/: 1ZKIVA.REP  3ZAIRNETAH.REP  DHW_MFSIZING.REP  DHW_SOLAR.rep  FANCOIL.REP  QW5DS.REP  SHADETEST.rep  commands.rep  wthr01.rep
test/ref-macos64-appleclang/: 1ZATTIC.REP  1ZKIVA.REP  2ZATTIC.REP  2ZONE.REP  2ZUN.REP  3ZAIRNETAH.REP  600.REP  930.REP  960.REP  ASHPPKGROOM.REP  ASHPTEST2.REP  ASHPVC2.REP  ASHP_DFNG.REP  AUTOSIZE.REP  BGTEST.REP  BT_TEST.REP  CHDHW.REP  CRTERMINALAH.REP  DHW-GENERIC-HPWH-UEF.REP  DHW02.REP  DHWLS.rep  DHW_AQUATHERMAIRE.REP  DHW_BRWL.REP  DHW_C.REP  DHW_DR.REP  DHW_INV.REP  DHW_MFSIZING.REP  DHW_SOLAR.rep  DHW_UEF.REP  DHW_ZONE.REP  DWHR.REP  ExportFileOutput.rep  FANCOIL.REP  FRESNO.REP  HERV.rep  IZFANTEST.REP  LOADANDAFMETERS.REP  MASSTEST1.REP  MF8X.REP  MINIMUM_RUNNING_FILE.REP  (+21 more)
test/ref-win32-msvc/: 1ZATTIC.REP  1ZKIVA.REP  2ZONE.REP  2ZUN.REP  600.REP  ASHPPKGROOM.REP  ASHPTEST2.REP  ASHPVC2.REP  ASHP_DFNG.REP  AUTOSIZE.REP  BT_TEST.REP  CHDHW.REP  CONVECTION.REP  DHW_AQUATHERMAIRE.REP  DHW_BRWL.REP  DHW_C.REP  DHW_DR.REP  DHW_INV.REP  DHW_MFSIZING.REP  DHW_SOLAR.rep  DHW_ZONE.REP  DWHR.REP  FANCOIL.REP  FRESNO.REP  HERV.rep  IMPORT.REP  IZFANTEST.REP  LOADANDAFMETERS.REP  MF8X.REP  MINIMUM_RUNNING_FILE.REP  MULTIFAMILY-DOAS.REP  PERFMAP.REP  PERFMAP3.REP  PVTest.rep  WSHP.REP  accumulator.rep  ashwat1.rep  bgtest.rep  commands.rep  dhw02.rep  (+8 more)
test/ref-win32-msvc-release/: IZFANTEST.REP  expressions.rep
test/ref-win64-msvc/: 1ZATTIC.REP  1ZKIVA.REP  2ZATTIC.REP  2ZONE.REP  2ZUN.REP  3ZAIRNETAH.REP  600.REP  ASHPPKGROOM.REP  ASHPTEST2.REP  ASHP_DFNG.REP  CHDHW.REP  CONVECTION.REP  DHW_AQUATHERMAIRE.REP  DHW_BRWL.REP  DHW_DR.REP  DHW_MFSIZING.REP  DHW_SOLAR.rep  DHW_ZONE.REP  DWHR.REP  FANCOIL.REP  FRESNO.REP  IMPORT.REP  IZFANTEST.REP  LOADANDAFMETERS.REP  MF8X.REP  MULTIFAMILY-DOAS.REP  PERFMAP.REP  PERFMAP3.REP  PV_BT_TEST.REP  PX.REP  QW5DS.REP  SHADETEST.rep  WSHP.REP  Z2SG.REP  accumulator.rep  ashwat1.rep  bgtest.rep  commands.rep  dhw02.rep  dhwloop32U.rep  (+6 more)
test/ref-windows-msvc-32-release/: ASHPPKGROOM.REP  ASHP_DFNG.REP  CHDHW.REP  DHW_BRWL.REP  DHW_MFSIZING.REP  FANCOIL.REP  MASSTEST1.REP  MF8X.REP  WSHP.REP  Z2SG.REP  ashwat1.rep
test/unit/: CMakeLists.txt  cse_tests.unit.cpp  cvpak.unit.cpp  nummeth.unit.cpp  strpak.unit.cpp  tdpak.unit.cpp  (+1 more)
(+518 files in other folders)
