[project]
name = "cse"
version = "0.1.0"
description = "Source code for the California Simulation Engine and documentation"
requires-python = "~=3.12"
readme = "README.md"
keywords = ["cse", "energy-modeling", "simulation"]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-awesome-nav>=3.1.2",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.16",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "types-pyyaml>=6.0.12.20250516",
]

[dependency-groups]
dev = ["ruff", "pytest", "doit", "pre-commit", "mypy"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors (see https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
    "F",    # pyflakes (see https://docs.astral.sh/ruff/rules/#pyflakes-f)
    "PL",   # Pylint (see https://docs.astral.sh/ruff/rules/#pylint-pl)
    "I001", # isort unsorted-imports (see https://docs.astral.sh/ruff/rules/#isort-i)
]
ignore = [
    "F405", # undefined-local-with-import-star-usage
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.mypy]
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "cse.*"
disable_error_code = ["annotation-unchecked", "import"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cse"]

[tool.uv]
[tool.uv.sources]
