add_subdirectory(unit)

add_subdirectory(wcmp)

add_subdirectory(error_handling)

set( ref_dir "ref-${CSE_OS_NAME}${CSE_BUILD_ARCHITECTURE}-${CSE_COMPILER_NAME}")

macro(make_cse_test case)
  get_filename_component(test_name ${case} NAME_WE)
  set(test_comment "! ")
  add_test(NAME ${test_name}.Run
  COMMAND $<TARGET_FILE:CSE> -x${test_comment} -b -t1 ${ARGN} "${test_name}"
  WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
  )

  if (EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${ref_dir}")
    add_test(NAME ${test_name}.Regression
      COMMAND $<TARGET_FILE:wcmp> "${CMAKE_CURRENT_SOURCE_DIR}/${test_name}.rep" "${CMAKE_CURRENT_SOURCE_DIR}/${ref_dir}/${test_name}.rep" "!"
      WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
    )
    set_tests_properties(${test_name}.Regression PROPERTIES DEPENDS ${test_name}.Run)
  endif ()
endmacro()

make_cse_test(minimum_running_file.cse)
make_cse_test(commands.cse)
make_cse_test(expressions.cse)
make_cse_test(wthr01.cse)
make_cse_test(accumulator.cse)
make_cse_test(600.cse)
make_cse_test(930.cse)
make_cse_test(960.cse)
make_cse_test(2Zone.cse)
make_cse_test(3ZAirNetAH.cse)
make_cse_test(Fresno.cse)
make_cse_test(Autosize.cse)
make_cse_test(masstest1.cse)
#make_cse_test(12P21M)
#make_cse_test(1ZCZMU)
make_cse_test(Z2SG.cse)
make_cse_test(zonetest4W.cse)
make_cse_test(zt5d.cse)
make_cse_test(qw5ds.cse)
make_cse_test(izfantest.cse)
#make_cse_test(2700x)
make_cse_test(2zun.cse)
make_cse_test(1zattic.cse)
make_cse_test(1ZKiva.cse)
make_cse_test(2zattic.cse)
make_cse_test(convection.cse)
make_cse_test(actest1bL.cse)
make_cse_test(ashptest2)
make_cse_test(ashpPkgRoom)
make_cse_test(ashp_dfng)
make_cse_test(perfmap)
make_cse_test(perfmap3)
make_cse_test(perfmap2z)
make_cse_test(fancoil)
make_cse_test(wshp)
make_cse_test(herv)
make_cse_test(Multifamily-DOAS)
make_cse_test(oavtest2)
make_cse_test(bgtest)
make_cse_test(ashwat1)
make_cse_test(loadAndAFMeters)
make_cse_test(dhw02)
make_cse_test(dhwX)
make_cse_test(dhwDU)
make_cse_test(dhw_C)
make_cse_test(dhw_solar)
make_cse_test(dhw_zone)
make_cse_test(dhw_dr)
make_cse_test(dwhr)
make_cse_test(dhwls)
make_cse_test(DHW_INV )
make_cse_test(dhw_uef)
make_cse_test(dhw_brwl)
make_cse_test(dhwloop32U)
make_cse_test(dhw_mfsizing)
make_cse_test(dhw_aquathermaire)
make_cse_test(chdhw)
make_cse_test(pvtest)
make_cse_test(pv_bt_test)
make_cse_test(bt_test)
make_cse_test(submeter)
make_cse_test(shadetest)
make_cse_test(CRTerminalAH)
make_cse_test(MF8X)
make_cse_test(ExportFileOutput -DEXPORT_FILE_ABSOLUTE_PATH="${CMAKE_SOURCE_DIR}/test/absolutePathEXPORTFILE.csv")

if (${CMAKE_HOST_SYSTEM_NAME} STREQUAL "Windows")
  set(script_ext "bat")
  set(shell_path "REM Batch script")
else()
  set(script_ext "sh")
  set(shell_path "#!/bin/bash")
endif()

configure_file("diff.bat.in" "${CMAKE_BINARY_DIR}/diff.${script_ext}" FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ)
configure_file("update.bat.in" "${CMAKE_BINARY_DIR}/update.${script_ext}" FILE_PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ)


